Add classes to elements for easier styling.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
 </head>
 <body>
 
-    <header>
-        <div>Player 1 score:</div>
-        <div class="player1-scroe"></div>
-        <h1>Tic-Tac-Toe</h1>
-        <div>Player 2 score:</div>
-        <div class="player2-score"></div>
+    <header class="header-container">
+        <div class="player1">
+            <div>Player 1 score:</div>
+            <div class="player1-scroe"></div>
+        </div>
+
+        <h1 class="title">Tic-Tac-Toe</h1>
+
+        <div class="player2">
+            <div>Player 2 score:</div>
+            <div class="player2-score"></div>
+        </div>
     </header>
 
     <main>
         <div class="game-board"></div>
     </main>
 
-    <footer>
-        by <a href="http://">DonPerger</a>
-        <img src="./icons/icons8-github.svg" alt="GitHub icon">
+    <footer class="footer-container">
+        by <a class="github-link" href="https://github.com/donperger">DonPerger</a>
+        <img class="github-icon" src="./icons/icons8-github.svg" alt="GitHub icon">
     </footer>
     
 </body>
