--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header-container">
         <div class="player1">
             <div>Player 1 score:</div>
-            <div class="player1-scroe"></div>
+            <div class="player1-score"></div>
         </div>
 
         <h1 class="title">Tic-Tac-Toe</h1>
