Add Play again and Restart buttons.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <main>
         <div class="round-label"></div>
         <div class="game-board"></div>
+        <div class="button-container">
+            <button class="again">Play again</button>
+            <button class="res">Reset</button>
+        </div>
     </main>
 
     <footer class="footer-container">
