Correct some typos.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="game-board"></div>
         <div class="button-container">
             <button class="again">Play again</button>
-            <button class="res">Reset</button>
+            <button class="res">Restart</button>
         </div>
     </main>
 
