Create announcer div.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
 
     <main>
+        <div class="announcer">The winner is Jani!</div>
         <div class="round-label"></div>
         <div class="game-board"></div>
         <div class="button-container">
