Create name form.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     </header>
 
     <main>
+        <div class="name-form">
+            <div class="question">Who's playing?</div>
+            
+            <label for="player1_name">Player 1's name:</label>
+            <input type="text" id="player1_name">
+
+            <label for="player2_name">Player 2's name:</label>
+            <input type="text" id="player2_name">
+
+            <button class="start">Start the game</button>
+        </div>
         <div class="announcer"></div>
         <div class="round-label"></div>
         <div class="game-board"></div>
