--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
     <main>
         <div class="name-form">
             <div class="question">Who's playing?</div>
-            
-            <label for="player1_name">Player 1's name:</label>
-            <input type="text" id="player1_name">
 
-            <label for="player2_name">Player 2's name:</label>
-            <input type="text" id="player2_name">
+            <div class="input-container">
+                <div class="player1-input">
+                    <label for="player1_name">Player 1's name:</label>
+                    <input type="text" id="player1_name">
+                </div>
+                <div class="player2-input">
+                    <label for="player2_name">Player 2's name:</label>
+                    <input type="text" id="player2_name">
+                </div>
+            </div>
 
             <button class="start">Start the game</button>
         </div>
