Add autofocus attribute to player1_name input.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="input-container">
                 <div class="player1-input">
                     <label for="player1_name">Player 1's name:</label>
-                    <input type="text" id="player1_name">
+                    <input type="text" id="player1_name" autofocus>
                 </div>
                 <div class="player2-input">
                     <label for="player2_name">Player 2's name:</label>
