Add dropdown menu to choose opotent.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                     <label for="player2_name">Player 2's name:</label>
                     <input type="text" id="player2_name">
                 </div>
+                <div class="ai-dropdown">
+                    <select name="ai">
+                        <option value="player">Player</option>
+                        <option value="random">AI</option>
+                        <option value="unbeatable">Unbeatable AI</option>
+                    </select>
+                </div>
             </div>
 
             <button class="start">Start the game</button>
