Add id to dropdown.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input type="text" id="player2_name">
                 </div>
                 <div class="ai-dropdown">
-                    <select name="ai">
+                    <select name="ai" id="ai">
                         <option value="player">Player</option>
                         <option value="random">AI</option>
                         <option value="unbeatable">Unbeatable AI</option>
