Rearrange name form.

--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
                     <label for="player1_name">Player 1's name:</label>
                     <input type="text" id="player1_name" autofocus>
                 </div>
-                <div class="player2-input">
-                    <label for="player2_name">Player 2's name:</label>
-                    <input type="text" id="player2_name">
-                </div>
                 <div class="ai-dropdown">
+                    <label for="ai">Opotent:</label>
                     <select name="ai" id="ai">
                         <option value="player">Player</option>
                         <option value="random">AI</option>
                         <option value="unbeatable">Unbeatable AI</option>
                     </select>
+                </div>
+                <div class="player2-input">
+                    <label for="player2_name" class="player2-label">Player 2's name:</label>
+                    <input type="text" id="player2_name">
                 </div>
             </div>
 
