--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
             <button class="start">Start the game</button>
         </div>
         <div class="announcer"></div>
-        <div class="round-label"></div>
-        <div class="game-board"></div>
-        <div class="button-container">
-            <button class="again">Play again</button>
-            <button class="res">Restart</button>
+        <div class="game-board-container">
+            
+            <div class="round-label"></div>
+            <div class="game-board"></div>
+            <div class="button-container">
+                <button class="again">Play again</button>
+                <button class="res">Restart</button>
+            </div>
         </div>
     </main>
 
